--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WeatherX</string>
+    <string name="temperature_celsius">%d°C</string>
+    <string name="something_went_wrong">Something went wrong</string>
+    <string name="retry">RETRY</string>
 </resources>
